<resources>
    <string name="app_name">FoodRestaurant</string>
    <string name="button.finish">FINISH</string>
    <string name="button.next">NEXT</string>
    <string name="button.skip">SKIP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="forget_password">forget password?</string>
    <string name="welcome_back">welcome back</string>
    <string name="hi">Hi</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api_map">AIzaSyCsNE4JNKvA6uR-TBaNXuw6NKkDv-JiAYQ</string>
    <string name="enable_location">Enable Location</string>
    <string name="no_i_do_it_later">No , I do it later</string>

    <!--    -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="content_home">This is the Home Screen</string>
    <string name="content_dashboard">This is the DashBoard Screen</string>
    <string name="content_notification">This is the Notification Screen</string>
    <string name="content_profile">This is the Profile Screen</string>
    <string name="content_settings">This is the Settings Screen</string>
    <string name="you_forget_password">You forget \n password!</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="no_history_yet">No history yet</string>
    <string name="hit_the_orange_button_down_n_below_to_create_an_order">Hit the orange button down \n below to Create an order</string>
    <string name="start_ordering">start ordering</string>
    <string name="oh_snap_there_are_no_offers_available_currently">Oh snap, there are no offers available currently.</string>
    <string name="start">start</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="search">search</string>
    <!--    -->
</resources>
