<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.doubleclick.foodresturent.android.Home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.doubleclick.foodresturent.android.Home.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.doubleclick.foodresturent.android.Home.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.doubleclick.foodresturent.android.Home.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.doubleclick.foodresturent.android.Home.ui.ProfileFragment"
        android:label="@string/title_profile" />

</navigation>